# pyo3-abstract-classes

./: .gitignore  Cargo.toml  README.md  main.py  main.rs
abstracto3/: __init__.pyi  __init__.rs  lib.rs
macros/: Cargo.toml
